--- a/Desserts/Desserts.html
+++ b/Desserts/Desserts.html
@@ -33,8 +33,8 @@
 							<center><h1 class="Ah1">RECIPES</h1></center>
 							<tr>
 								<td class = "col-1" style="padding-right: 10px;">
-									<a href="../Desserts/dessert/Item-1/Item-1.html">
-										<img src="../Desserts/dessert/Item-1/turnover.png" alt="dessert-1" class="something" >
+									<a href="Dessert/Item-1/Item-1.html">
+										<img src="Dessert/Item-1/turnover.png" alt="dessert-1" class="something" >
 									</a>
 								</td>
 					
