worked on items and footer

--- a/Index/Index.html
+++ b/Index/Index.html
@@ -53,7 +53,7 @@
                         </td>
 						<td class="col-1">
 							<a href="../Desserts/Dessert/Item-6/Item-6.html">
-								<img src="IndexImages/fhcc.png" alt="cookie-1" class="something" width="75%" height="300px">
+								<img src="IndexImages/bunn3.jpg" alt="cookie-1" class="something" width="75%" height="300px">
 							</a>
                         </td>
 					</tr>
