added last few items

--- a/Cakes/Cakes/Item-1/Item-1.html
+++ b/Cakes/Cakes/Item-1/Item-1.html
@@ -22,8 +22,8 @@
 							<li><a href="../../../Index/Index.html"> Home</a></li>
 							<li><a href="../../../Desserts/Desserts.html"> Recipes</a></li>
 							<li><a href="../../../Cakes/Cakes.html"> Items</a></li>
-							<li><a href="../../../Order/Order.html">Custom Order</a></li>
-							<li><a href="../../../ContactUs/ContactUs.html">Contact Us</a></li>
+							<li><a href="../../../Order/Order.html"> Order</a></li>
+							<li><a href="../../../ContactUs/ContactUs.html">Contacts</a></li>
 						</ul>
 					</nav>
 				<hr>
@@ -33,7 +33,7 @@
 
 					<div class="row">
 						<div class="column">
-							<img src="egg.jpg" alt="cake-1" class="something" width="70%" height="400px">			
+							<img src="egg.jpg" alt="cake-1" class="something" width="75%" height="400px">			
 							</a>
 						</div>
 						<div class="column1">
@@ -53,7 +53,7 @@
 						<h2>Where to buy:</h2>
 							<br>
 								<a href=https://www.realcanadiansuperstore.ca/en/egg-replacer/p/21416662_EA?source=nspt	class="a"> Buy item </a><br>
-							<p> To find this item in store, go the the very back of the vegan aisle in Superstore and look to your right hand side it will be located at the middle or the top of the shelf.
+							<p> To find this item in store, go the the very back of the vegan aisle in the Real Canadian Superstore at King Cross and look to your right hand side it will be located at the middle or the top of the shelf.
 						</div>
 					  </div>
 
