--- a/Desserts/Desserts.html
+++ b/Desserts/Desserts.html
@@ -24,8 +24,8 @@
 							<li><a href="../Index/Index.html"> Home</a></li>
 							<li><a href="Desserts.html"> Recipes</a></li>
 							<li><a href="../Cakes/Cakes.html"> Items</a>
-							<li><a href="../Order/Order.html">Custom Order</a></li>
-							<li><a href="../ContactUs/ContactUs.html">Contact Us</a></li>
+							<li><a href="../Order/Order.html"> Order</a></li>
+							<li><a href="../ContactUs/ContactUs.html">Contacts</a></li>
 						</ul>
 					</nav>
 				<hr>
