--- a/Index/Index.html
+++ b/Index/Index.html
@@ -20,8 +20,8 @@
 							<li><a href="Index.html"> Home</a></li>
 							<li><a href="../Desserts/Desserts.html"> Recipes</a></li>
 							<li><a href="../Cakes/Cakes.html"> Items</a></li>
-							<li><a href="../Order/Order.html">Custom Order</a></li>
-							<li><a href="../ContactUs/ContactUs.html">Contact Us</a></li> 
+							<li><a href="../Order/Order.html"> Order</a></li>
+							<li><a href="../ContactUs/ContactUs.html">Contacts</a></li> 
 						</ul>
 					</nav>
 				<div class="hero-image">
