--- a/Order/Done/done.html
+++ b/Order/Done/done.html
@@ -19,11 +19,11 @@
 				<h1><span style="font-size: 50px;">🍰</span>BAKEBOX</h1>
 					<nav class="navbar">
 						<ul>
-							<li><a href="../../../Index/Index.html"> Home</a></li>
-							<li><a href="../../../Desserts/Desserts.html"> Desserts</a></li>
-							<li><a href="../../../Cakes/Cakes.html"> Cakes</a></li>
-							<li><a href="../../../Order/Order.html">Custom Order</a></li>
-							<li><a href="../../../ContactUs/ContactUs.html">Contact Us</a></li>
+							<li><a href="../../Index/Index.html"> Home</a></li>
+							<li><a href="../../../Desserts/Desserts.html"> Recipes</a></li>
+							<li><a href="../../../Cakes/Cakes.html"> Items</a></li>
+							<li><a href="../../../Order/Order.html"> Order</a></li>
+							<li><a href="../../../ContactUs/ContactUs.html">Contacts</a></li>
 						</ul>
 					</nav>
 				<hr>
