--- a/Order/Order.html
+++ b/Order/Order.html
@@ -3,7 +3,7 @@
 	<html>
 		<head>
 		
-			<title>Custom Order</title>
+			<title>Order</title>
 			<meta charset="UTF-8">
 			<meta name="keyword" content="My Website">
 			<meta name="author" content="Sukhman">
@@ -20,10 +20,10 @@
 				<nav class = "navbar">
 						<ul>
 							<li><a href="../Index/Index.html"> Home</a></li>
-							<li><a href="../Desserts/Desserts.html"> Desserts</a></li>
-							<li><a href="../Cakes/Cakes.html"> Cakes</a></li>
-							<li><a href="Order.html">Custom Order</a></li>
-							<li><a href="../ContactUs/ContactUs.html">Contact Us</a></li>
+							<li><a href="../Desserts/Desserts.html"> Recipes</a></li>
+							<li><a href="../Cakes/Cakes.html"> Items</a></li>
+							<li><a href="Order.html"> Order</a></li>
+							<li><a href="../ContactUs/ContactUs.html">Contacts</a></li>
 						</ul>
 					</nav>
 				<hr>
