--- a/Desserts/Dessert/Item-1/Item-1.html
+++ b/Desserts/Dessert/Item-1/Item-1.html
@@ -22,8 +22,8 @@
 							<li><a href="../../../Index/Index.html"> Home</a></li>
 							<li><a href="../../../Desserts/Desserts.html"> Recipes</a></li>
 							<li><a href="../../../Cakes/Cakes.html"> Items</a></li>
-							<li><a href="../../../Order/Order.html">Custom Order</a></li>
-							<li><a href="../../../ContactUs/ContactUs.html">Contact Us</a></li>
+							<li><a href="../../../Order/Order.html"> Order</a></li>
+							<li><a href="../../../ContactUs/ContactUs.html">Contacts</a></li>
 						</ul>
 					</nav>
 				<hr>
