added stuff on about me page

--- a/ContactUs/ContactUs.html
+++ b/ContactUs/ContactUs.html
@@ -30,18 +30,21 @@
 			<div class="contact-info">
 
 				<div>
-			<h1 class="Ah1""> CONTACT US</h1>
+			<h1 class="Ah1""> CONTACTS</h1>
 					<p class="Ap"> 
 						<b>Where:</b> Somewhere on earth
+					<br>
 					<br>
 					<br>
 						<b>Open When:</b> Never
 					<br>
 					<br>
-						<b>Something:</b> um something something
+					<br>
+						<b>Email:</b> BAKE_BOX@gmail.com
 					<br>
 					<br>
-						<b>Email:</b> BAKE_BOX@gmial.com
+					<br>
+						<b>Other:</b> For more imformation, please come visit us in store.
 					</p>
 				</div>
 			<div  class="Amap">
