--- a/Index/Index.html
+++ b/Index/Index.html
@@ -36,8 +36,8 @@
 			</header>
 		<br>
 		<center>
-		<h1>ABOUT ME</h1>
-			<p style="font-size:20px">Welcome to our bakery, where every cake tells a story, and every pastry is a delight.<br> From the aroma of freshly baked bread to the sweetness of our decadent desserts, we strive<br> to create moments of joy with every bite. Our passion for baking shines through in every recipe,<br> crafted with care and attention to detail. Step inside and experience the warmth of our oven and the richness of our flavors.<br> Welcome to a world where every day is a celebration of deliciousness. Welcome to our bakery.</p>
+		<h1>ABOUT WEBSITE</h1>
+			<p style="font-size:20px">WELCOME, this webiste is a capstone project, combining my passion<br> for baking and desgin. It contains many eggless baked goods recipes and  <br>items that were used, which wouldnt usually have at home. Aswell as some pages that i included for fun <br>and to test myself a bit.</p>
 		</center>
 		
 		<section class="section-1">
